# LongLostDrifter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: engine.cpp  engine.hpp  player.cpp  player.hpp  resourceManager.cpp  resourceManager.hpp  sprite.cpp  sprite.hpp
TheGame/: main.cpp
src/: main.cpp
